--- a/hello.html
+++ b/hello.html
@@ -4,7 +4,7 @@
     <title>Hello!</title>
 </head>
 <body>
-    <h1>Welcome to My Web Page!!</h1>
+    <h1>Welcome to My Web Page</h1>
     <h2>This is a second heading</h2>
     Hello World!
 </body>
